fix arrow on iOS

--- a/src/styles/Donation.css
+++ b/src/styles/Donation.css
@@ -5,7 +5,7 @@
 .donation {
     text-align: left;
     overflow: hidden;
-    margin: 0.3rem;
+    margin: 0.75rem 0.3rem;
     display: flex;
     justify-content: center;
     align-items: center;
