--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -14,7 +14,6 @@
     height: 3.5rem;
     background: none;
     border: none;
-    top: -0.2rem;
     left: calc(50% - 4.5rem);
 }
 
